--- a/yumshare-client/src/app/components/card/card.component.scss
+++ b/yumshare-client/src/app/components/card/card.component.scss
@@ -100,6 +100,33 @@
       gap: 12px;
       margin: 0 16px 12px;
     }
+    .like-count {
+      display: flex;
+      align-items: center;
+      font-size: 13px;
+      color: #555;
+      gap: 4px;
+      line-height: 1;
+      user-select: none;
+      -webkit-user-select: none;
+      -ms-user-select: none;
+
+      mat-icon {
+        font-size: 16px !important;
+        width: 16px;
+        height: 16px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        vertical-align: middle;
+      }
+      span {
+        display: flex;
+        align-items: center;
+        height: 16px;
+        line-height: 16px;
+      }
+    }
     .difficulty-label {
       font-weight: 600;
       padding: 2px 10px;
