--- a/yumshare-client/src/app/pages/recipe-detail/recipe-detail.component.scss
+++ b/yumshare-client/src/app/pages/recipe-detail/recipe-detail.component.scss
@@ -434,7 +434,7 @@ p {
   height: auto;
   border-radius: 1rem;
   display: flex;
-  margin: 0 auto;
+  margin: 0.5rem;
 }
 .bottom-under{
   width: 100%;
